cluster/kube-system/authelia/authelia.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authelia
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
spec:
  tls:
    - hosts:
        - auth.holthome.net
  rules:
    - host: auth.holthome.net
      http:
        paths:
          - backend:
              serviceName: authelia
              servicePort: 9091
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: authelia
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: authelia
  ingress:
  - ports:
    - port: 9091
    from:
    - namespaceSelector:
        matchLabels:
          name: kube-system
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: kube-system
spec:
  selector:
    app: authelia
  ports:
  - name: authelia
    port: 9091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      volumes:
        - name: authelia-config
          projected:
            sources:
              - secret:
                  name: authelia-users
                  items:
                    - key: users.yaml
                      path: users.yaml
              - configMap:
                  name: authelia-custom
                  items:
                    - key: custom.yaml
                      path: custom.yaml
        - name: authelia-secrets
          secret:
            secretName: authelia-secrets
      containers:
        - name: authelia
          image: authelia/authelia:4
          # image: alpine
          ports:
            - name: authelia
              containerPort: 9091
          volumeMounts:
            - name: authelia-config
              mountPath: /config
              readOnly: true
            - name: authelia-secrets
              mountPath: /secrets
              readOnly: true
          # command: ["sleep"]
          # args: ["10000000"]
          command: ["authelia"]
          args: ["--config", "/config/custom.yaml"]
